--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1341,3 +1341,9 @@ $border-top-color_1: rgb(57, 190, 57);
 .homepage-wrapper .homepage .popular-products-wrapper .popular-products .container-with-popular-products .categories-filtering-items .add-basket {
   display: none !important;
 }
+.about-page-wrapper .about-page .services-us .grid-services .item-service {
+  justify-content: flex-start !important;
+}
+.homepage-wrapper .homepage .special-offers-wrapper .special-offers .gridoffer .left .text-for-left .formore {
+  display: flex !important;
+}
