--- a/src/styles/pages/creditstorefavoritpages.scss
+++ b/src/styles/pages/creditstorefavoritpages.scss
@@ -348,29 +348,20 @@
       align-items: flex-start;
       justify-content: flex-start;
       flex-direction: column;
+     
       .map-and-locations {
         width: 100%;
-        height: 643px;
         position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
         margin-top: 29px;
         border-radius: 18px;
-        min-width: 1224px;
         margin: 29px auto auto;
         overflow: hidden;
-        iframe {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          pointer-events: none;
-        }
 
         .locations {
-          position: absolute;
           z-index: 1000;
-          width: 50%;
+          width: 100%;
           left: 0;
           height: 100%;
           background: #ffffff;
@@ -423,6 +414,22 @@
             &:active {
               transform: scale(0.99);
             }
+          }
+        }
+        .wrappered-img {
+          width: 100%;
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          justify-items: flex-start;
+          align-items: flex-start;
+          gap: 8px;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: fill;
+          }
+          p {
+            padding: 48px;
           }
         }
       }
