--- a/src/styles/catalogpage.scss
+++ b/src/styles/catalogpage.scss
@@ -616,15 +616,28 @@
 
         .container-catalogpage-main {
           width: 100%;
+          display: flex;
+          align-items: flex-start;
+          justify-content: flex-start;
+          flex-direction: column;
+          h1 {
+            color: #000000;
+            font-weight: 400px;
+            font-size: 60px;
+          @include Nunito();
+          }
+          .loader-container {
+            position: absolute;
+            top: -260px;
+          }
+          .product {
+            width: 100%;
           margin-top: 12px;
           height: auto;
           display: grid;
           grid-template-columns: repeat(3, 1fr);
           gap: 36px;
           position: relative;
-          .loader-container {
-            position: absolute;
-            top: -260px;
           }
         }
 
