--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -5,6 +5,10 @@
     padding-left: 40px;
     padding-right: 40px;
   }
+  .catalog-page-wrapper {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
   .product-page-wrapper .products-page .container-products .products-main {
     max-width: 1000px;
   }
@@ -89,6 +93,7 @@
 }
 
 @media only screen and (max-width: 1360px) {
+ 
   .settings .settings-top-card .content .form-for-user .country-city-postalcode .inputs:nth-child(2) {
     min-width: unset;
   }
@@ -573,6 +578,16 @@
   }
 }
 @media only screen and (max-width: 968px) {
+  .catalog-page-wrapper .catalog-page .container-catalogpage {
+    flex-direction: column;
+  }
+  .catalog-page-wrapper .catalog-page .container-catalogpage .filter {
+    max-width: unset;
+    width: 100%;
+  }
+  .catalog-page-wrapper .catalog-page .container-catalogpage .container-catalogpage-main {
+    grid-template-columns: repeat(2, 1fr);
+  }
   .image-modal-overlay .image-modal {
     width: 280px;
     height: 280px;
@@ -2044,6 +2059,9 @@
 }
 
 @media only screen and (max-width: 568px) {
+  .catalog-page-wrapper .catalog-page .container-catalogpage .container-catalogpage-main {
+    grid-template-columns: repeat(1, 1fr);
+  }
   .app .catalog-toggle-menu-overlay .toggle-catalog-menu {
     width: 100%;
     height: 100vh;
